[INJIWEB-1704] - Fix code indentation in ClientValidationUtils.java - Fix code indentation in ClientValidationsUtilsTest.java
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>