@@ -1,15 +1,14 @@
 package io.mosip.mimoto.util;
 
-import static org.junit.jupiter.api.Assertions.*;
+import io.mosip.openID4VP.authorizationRequest.Verifier;
+import org.junit.jupiter.api.Test;
 
 import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import org.junit.jupiter.api.Test;
-
-import io.mosip.openID4VP.authorizationRequest.Verifier;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class ClientValidationsUtilsTest {
 
@@ -17,12 +16,11 @@ public class ClientValidationsUtilsTest {
     private static final String ENCODED_CLIENT_ID = "https%3A%2F%2Finjiverify.collab.mosip.net";
     private static final String VALID_RESPONSE_URI = "https://example.com/callback";
     private static final String ENCODED_RESPONSE_URI = "https%3A%2F%2Fexample.com%2Fcallback";
-    
+
 
     @Test
     public void testIsClientValidWithValidClientIdAndMatchingVerifier() {
-        List<Verifier> verifiers = Arrays.asList(
-                new Verifier(VALID_CLIENT_ID, Arrays.asList(VALID_RESPONSE_URI), null));
+        List<Verifier> verifiers = List.of(new Verifier(VALID_CLIENT_ID, List.of(VALID_RESPONSE_URI), null));
         String url = "https://example.com?client_id=" + ENCODED_CLIENT_ID + "&response_uri=" + ENCODED_RESPONSE_URI;
 
         boolean result = ClientValidationUtils.isVerifierClientPreregistered(verifiers, url);
@@ -32,8 +30,7 @@ public class ClientValidationsUtilsTest {
 
     @Test
     public void testIsClientValidWithValidClientIdButNoMatchingVerifier() {
-        List<Verifier> verifiers = Arrays.asList(
-                new Verifier("https://other-verifier.com", Arrays.asList(VALID_RESPONSE_URI), null));
+        List<Verifier> verifiers = List.of(new Verifier("https://other-verifier.com", List.of(VALID_RESPONSE_URI), null));
         String url = "https://example.com?client_id=" + ENCODED_CLIENT_ID;
 
         boolean result = ClientValidationUtils.isVerifierClientPreregistered(verifiers, url);
@@ -43,8 +40,7 @@ public class ClientValidationsUtilsTest {
 
     @Test
     public void testIsClientValidWithNullClientId() {
-        List<Verifier> verifiers = Arrays.asList(
-                new Verifier(VALID_CLIENT_ID, Arrays.asList(VALID_RESPONSE_URI), null));
+        List<Verifier> verifiers = List.of(new Verifier(VALID_CLIENT_ID, List.of(VALID_RESPONSE_URI), null));
         String url = "https://example.com?other_param=value";
 
         boolean result = ClientValidationUtils.isVerifierClientPreregistered(verifiers, url);
@@ -54,8 +50,7 @@ public class ClientValidationsUtilsTest {
 
     @Test
     public void testIsClientValidWithEmptyClientId() {
-        List<Verifier> verifiers = Arrays.asList(
-                new Verifier(VALID_CLIENT_ID, Arrays.asList(VALID_RESPONSE_URI), null));
+        List<Verifier> verifiers = List.of(new Verifier(VALID_CLIENT_ID, List.of(VALID_RESPONSE_URI), null));
         String url = "https://example.com?client_id=";
 
         boolean result = ClientValidationUtils.isVerifierClientPreregistered(verifiers, url);
@@ -65,8 +60,7 @@ public class ClientValidationsUtilsTest {
 
     @Test
     public void testIsClientValidWithWhitespaceOnlyClientId() {
-        List<Verifier> verifiers = Arrays.asList(
-                new Verifier(VALID_CLIENT_ID, Arrays.asList(VALID_RESPONSE_URI), null));
+        List<Verifier> verifiers = List.of(new Verifier(VALID_CLIENT_ID, List.of(VALID_RESPONSE_URI), null));
         String url = "https://example.com?client_id=%20%20";
 
         boolean result = ClientValidationUtils.isVerifierClientPreregistered(verifiers, url);
@@ -84,14 +78,11 @@ public class ClientValidationsUtilsTest {
         assertFalse(result);
     }
 
-    
 
     @Test
     public void testIsClientValidWithPartialResponseUrisMatch() {
-        List<String> verifierResponseUris = Arrays.asList("https://example.com/callback1",
-                "https://example.com/callback2");
-        List<Verifier> verifiers = Arrays.asList(
-                new Verifier(VALID_CLIENT_ID, verifierResponseUris, null));
+        List<String> verifierResponseUris = Arrays.asList("https://example.com/callback1", "https://example.com/callback2");
+        List<Verifier> verifiers = List.of(new Verifier(VALID_CLIENT_ID, verifierResponseUris, null));
         String url = "https://example.com?client_id=" + ENCODED_CLIENT_ID + "&response_uri=" + ENCODED_RESPONSE_URI;
 
         boolean result = ClientValidationUtils.isVerifierClientPreregistered(verifiers, url);
@@ -101,8 +92,7 @@ public class ClientValidationsUtilsTest {
 
     @Test
     public void testIsClientValidWithExceptionInExtraction() {
-        List<Verifier> verifiers = Arrays.asList(
-                new Verifier(VALID_CLIENT_ID, Arrays.asList(VALID_RESPONSE_URI), null));
+        List<Verifier> verifiers = List.of(new Verifier(VALID_CLIENT_ID, List.of(VALID_RESPONSE_URI), null));
         String url = null;
 
         boolean result = ClientValidationUtils.isVerifierClientPreregistered(verifiers, url);
@@ -182,8 +172,7 @@ public class ClientValidationsUtilsTest {
 
         Method method = ClientValidationUtils.class.getDeclaredMethod("extractResponseUrisFromUrl", String.class);
         method.setAccessible(true);
-        @SuppressWarnings("unchecked")
-        List<String> result = (List<String>) method.invoke(null, url);
+        @SuppressWarnings("unchecked") List<String> result = (List<String>) method.invoke(null, url);
 
         assertEquals(1, result.size());
         assertEquals(VALID_RESPONSE_URI, result.get(0));
@@ -195,8 +184,7 @@ public class ClientValidationsUtilsTest {
 
         Method method = ClientValidationUtils.class.getDeclaredMethod("extractResponseUrisFromUrl", String.class);
         method.setAccessible(true);
-        @SuppressWarnings("unchecked")
-        List<String> result = (List<String>) method.invoke(null, url);
+        @SuppressWarnings("unchecked") List<String> result = (List<String>) method.invoke(null, url);
 
         assertTrue(result.isEmpty());
     }
@@ -207,8 +195,7 @@ public class ClientValidationsUtilsTest {
 
         Method method = ClientValidationUtils.class.getDeclaredMethod("extractResponseUrisFromUrl", String.class);
         method.setAccessible(true);
-        @SuppressWarnings("unchecked")
-        List<String> result = (List<String>) method.invoke(null, url);
+        @SuppressWarnings("unchecked") List<String> result = (List<String>) method.invoke(null, url);
 
         assertTrue(result.isEmpty());
     }
@@ -219,8 +206,7 @@ public class ClientValidationsUtilsTest {
 
         Method method = ClientValidationUtils.class.getDeclaredMethod("extractResponseUrisFromUrl", String.class);
         method.setAccessible(true);
-        @SuppressWarnings("unchecked")
-        List<String> result = (List<String>) method.invoke(null, url);
+        @SuppressWarnings("unchecked") List<String> result = (List<String>) method.invoke(null, url);
 
         assertTrue(result.isEmpty());
     }
@@ -231,8 +217,7 @@ public class ClientValidationsUtilsTest {
 
         Method method = ClientValidationUtils.class.getDeclaredMethod("extractResponseUrisFromUrl", String.class);
         method.setAccessible(true);
-        @SuppressWarnings("unchecked")
-        List<String> result = (List<String>) method.invoke(null, url);
+        @SuppressWarnings("unchecked") List<String> result = (List<String>) method.invoke(null, url);
 
         assertTrue(result.isEmpty());
     }
@@ -243,8 +228,7 @@ public class ClientValidationsUtilsTest {
 
         Method method = ClientValidationUtils.class.getDeclaredMethod("extractResponseUrisFromUrl", String.class);
         method.setAccessible(true);
-        @SuppressWarnings("unchecked")
-        List<String> result = (List<String>) method.invoke(null, url);
+        @SuppressWarnings("unchecked") List<String> result = (List<String>) method.invoke(null, url);
 
         assertEquals(1, result.size());
         assertEquals("", result.get(0));
@@ -256,8 +240,7 @@ public class ClientValidationsUtilsTest {
 
         Method method = ClientValidationUtils.class.getDeclaredMethod("extractResponseUrisFromUrl", String.class);
         method.setAccessible(true);
-        @SuppressWarnings("unchecked")
-        List<String> result = (List<String>) method.invoke(null, url);
+        @SuppressWarnings("unchecked") List<String> result = (List<String>) method.invoke(null, url);
 
         assertFalse(result.isEmpty());
     }
@@ -266,8 +249,7 @@ public class ClientValidationsUtilsTest {
     public void testIsClientValidWithSpecialCharactersInClientId() {
         String specialClientId = "https://test.com/path?param=value&other=123";
         String encodedSpecialClientId = "https%3A%2F%2Ftest.com%2Fpath%3Fparam%3Dvalue%26other%3D123";
-        List<Verifier> verifiers = Arrays.asList(
-                new Verifier(specialClientId, Arrays.asList(VALID_RESPONSE_URI), null));
+        List<Verifier> verifiers = List.of(new Verifier(specialClientId, List.of(VALID_RESPONSE_URI), null));
         String url = "https://example.com?client_id=" + encodedSpecialClientId;
 
         boolean result = ClientValidationUtils.isVerifierClientPreregistered(verifiers, url);
@@ -279,10 +261,8 @@ public class ClientValidationsUtilsTest {
     public void testIsClientValidWithSpecialCharactersInResponseUri() {
         String specialResponseUri = "https://test.com/callback?param=value&other=123";
         String encodedSpecialResponseUri = "https%3A%2F%2Ftest.com%2Fcallback%3Fparam%3Dvalue%26other%3D123";
-        List<Verifier> verifiers = Arrays.asList(
-                new Verifier(VALID_CLIENT_ID, Arrays.asList(specialResponseUri), null));
-        String url = "https://example.com?client_id=" + ENCODED_CLIENT_ID + "&response_uri="
-                + encodedSpecialResponseUri;
+        List<Verifier> verifiers = List.of(new Verifier(VALID_CLIENT_ID, List.of(specialResponseUri), null));
+        String url = "https://example.com?client_id=" + ENCODED_CLIENT_ID + "&response_uri=" + encodedSpecialResponseUri;
 
         boolean result = ClientValidationUtils.isVerifierClientPreregistered(verifiers, url);
 
@@ -291,10 +271,7 @@ public class ClientValidationsUtilsTest {
 
     @Test
     public void testIsClientValidWithMultipleVerifiers() {
-        List<Verifier> verifiers = Arrays.asList(
-                new Verifier("https://verifier1.com", Arrays.asList("https://callback1.com"), null),
-                new Verifier(VALID_CLIENT_ID, Arrays.asList(VALID_RESPONSE_URI), null),
-                new Verifier("https://verifier3.com", Arrays.asList("https://callback3.com"), null));
+        List<Verifier> verifiers = Arrays.asList(new Verifier("https://verifier1.com", List.of("https://callback1.com"), null), new Verifier(VALID_CLIENT_ID, List.of(VALID_RESPONSE_URI), null), new Verifier("https://verifier3.com", List.of("https://callback3.com"), null));
         String url = "https://example.com?client_id=" + ENCODED_CLIENT_ID + "&response_uri=" + ENCODED_RESPONSE_URI;
 
         boolean result = ClientValidationUtils.isVerifierClientPreregistered(verifiers, url);
